crates/zenith/tests/snapshots/screens__opening_connecting__80x24__high-contrast.snap
---
source: crates/zenith/tests/screens.rs
expression: "screen(&draw(&script.app, width, height))"
---
                                   *   *                            ·
                                         •             ∙
       ∙        ·                                       *
         **        •               •       *
 •   ∙·                                                      ∙
  ·                                                         •
                                                                        ∙    *
                                                                   ·
∙                  ▄▄██  ██▄▄      ZENITH                               •
                 ▄█████  █████▄    The terminal of Constellation
             •  ▄██████████████▄   NIPS-CERN
                ████████████████   0.2.0


          •                    Connecting to SOLAR  ·

*
    ∙       ·  ·                                         ·
      ∙                                                ∙
                *                        ·     ∙            *         ·

                       •                                           •
       *            •          •
                                 *        *·   ∙
--- every cell not listed is #F5F1E8 on #0B0C14
 8: 16-31  #FFC23D on #0B0C14
 8: 35-40  #FFC23D on #0B0C14 bold
 9: 16-31  #FFC23D on #0B0C14
10: 16-31  #FFC23D on #0B0C14
11: 16-31  #FFC23D on #0B0C14
