crates/zenith/tests/snapshots/screens__opening_connecting__80x24__light.snap
---
source: crates/zenith/tests/screens.rs
expression: "screen(&draw(&script.app, width, height))"
---
                                   *   *                            ·
                                         •             ∙
       ∙        ·                                       *
         **        •               •       *
 •   ∙·
  ·
               ▄▄██████▄▄                                               ∙    *
             ▄████████████▄
∙           ▄████              SOLAR                                    •
            ████████████████   The central API of the Constellation
            ████████████████   NIPS-CERN
                       ████▀   connecting
             ▀████████████▀
               ▀▀██████▀▀


*                  ZENITH 0.1.0, the terminal of Constellation   ·


                *                        ·     ∙            *         ·

                       •                                           •
       *            •          •
                                 *        *·   ∙
--- every cell not listed is #17161C on #F5F1E8
 0: 35-35  #555355 on #F5F1E8
 0: 39-39  #868482 on #F5F1E8
 0: 68-68  #868482 on #F5F1E8
 1: 41-41  #555355 on #F5F1E8
 1: 55-55  #868482 on #F5F1E8
 2:  7-7   #868482 on #F5F1E8
 2: 16-16  #868482 on #F5F1E8
 2: 56-56  #868482 on #F5F1E8
 3:  9-9   #555355 on #F5F1E8
 3: 10-10  #868482 on #F5F1E8
 3: 19-19  #868482 on #F5F1E8
 3: 35-35  #555355 on #F5F1E8
 3: 43-43  #868482 on #F5F1E8
 4:  1-1   #868482 on #F5F1E8
 4:  5-5   #868482 on #F5F1E8
 4:  6-6   #555355 on #F5F1E8
 5:  2-2   #555355 on #F5F1E8
 6: 12-27  #B35A00 on #F5F1E8
 6: 72-72  #555355 on #F5F1E8
 6: 77-77  #555355 on #F5F1E8
 7: 12-27  #B35A00 on #F5F1E8
 8:  0-0   #868482 on #F5F1E8
 8: 12-27  #B35A00 on #F5F1E8
 8: 31-35  #8C4907 on #F5F1E8 bold
 8: 72-72  #555355 on #F5F1E8
 9: 12-27  #B35A00 on #F5F1E8
10: 12-27  #B35A00 on #F5F1E8
10: 31-39  #555355 on #F5F1E8
11: 12-27  #B35A00 on #F5F1E8
11: 31-40  #555355 on #F5F1E8
12: 12-27  #B35A00 on #F5F1E8
13: 12-27  #B35A00 on #F5F1E8
16:  0-0   #555355 on #F5F1E8
16: 19-61  #555355 on #F5F1E8
16: 65-65  #868482 on #F5F1E8
19: 16-16  #555355 on #F5F1E8
19: 41-41  #868482 on #F5F1E8
19: 47-47  #868482 on #F5F1E8
19: 60-60  #868482 on #F5F1E8
19: 70-70  #868482 on #F5F1E8
21: 23-23  #868482 on #F5F1E8
21: 67-67  #868482 on #F5F1E8
22:  7-7   #868482 on #F5F1E8
22: 20-20  #868482 on #F5F1E8
22: 31-31  #868482 on #F5F1E8
23: 33-33  #868482 on #F5F1E8
23: 42-42  #555355 on #F5F1E8
23: 43-43  #868482 on #F5F1E8
23: 47-47  #868482 on #F5F1E8
