crates/zenith/tests/snapshots/screens__opening_connecting__80x24__night.snap
---
source: crates/zenith/tests/screens.rs
expression: "screen(&draw(&script.app, width, height))"
---
                                   *   *                            ·
                                         •             ∙
       ∙        ·                                       *
         **        •               •       *
 •   ∙·                                                      ∙
  ·                                                         •
                                                                        ∙    *
                                                                   ·
∙                  ▄▄██  ██▄▄      ZENITH                               •
                 ▄█████  █████▄    The terminal of Constellation
             •  ▄██████████████▄   NIPS-CERN
                ████████████████   0.2.0


          •                    Connecting to SOLAR  ·

*
    ∙       ·  ·                                         ·
      ∙                                                ∙
                *                        ·     ∙            *         ·

                       •                                           •
       *            •          •
                                 *        *·   ∙
--- every cell not listed is #F5F1E8 on #0B0C14
 0: 35-35  #9C9A97 on #0B0C14
 0: 39-39  #646365 on #0B0C14
 0: 68-68  #646365 on #0B0C14
 1: 41-41  #9C9A97 on #0B0C14
 1: 55-55  #646365 on #0B0C14
 2:  7-7   #646365 on #0B0C14
 2: 16-16  #646365 on #0B0C14
 2: 56-56  #646365 on #0B0C14
 3:  9-9   #9C9A97 on #0B0C14
 3: 10-10  #646365 on #0B0C14
 3: 19-19  #646365 on #0B0C14
 3: 35-35  #9C9A97 on #0B0C14
 3: 43-43  #646365 on #0B0C14
 4:  1-1   #646365 on #0B0C14
 4:  5-5   #646365 on #0B0C14
 4:  6-6   #9C9A97 on #0B0C14
 4: 61-61  #9C9A97 on #0B0C14
 5:  2-2   #9C9A97 on #0B0C14
 5: 60-60  #9C9A97 on #0B0C14
 6: 72-72  #9C9A97 on #0B0C14
 6: 77-77  #9C9A97 on #0B0C14
 7: 67-67  #646365 on #0B0C14
 8:  0-0   #646365 on #0B0C14
 8: 16-31  #FFC23D on #0B0C14
 8: 35-40  #FFC23D on #0B0C14 bold
 8: 72-72  #9C9A97 on #0B0C14
 9: 16-31  #FFC23D on #0B0C14
10: 13-13  #9C9A97 on #0B0C14
10: 16-31  #FFC23D on #0B0C14
10: 35-43  #9C9A97 on #0B0C14
11: 16-31  #FFC23D on #0B0C14
11: 35-39  #9C9A97 on #0B0C14
14: 10-10  #646365 on #0B0C14
14: 31-49  #9C9A97 on #0B0C14
14: 52-52  #646365 on #0B0C14
16:  0-0   #9C9A97 on #0B0C14
17:  4-4   #646365 on #0B0C14
17: 12-12  #646365 on #0B0C14
17: 15-15  #646365 on #0B0C14
17: 57-57  #646365 on #0B0C14
18:  6-6   #646365 on #0B0C14
18: 55-55  #646365 on #0B0C14
19: 16-16  #9C9A97 on #0B0C14
19: 41-41  #646365 on #0B0C14
19: 47-47  #646365 on #0B0C14
19: 60-60  #646365 on #0B0C14
19: 70-70  #646365 on #0B0C14
21: 23-23  #646365 on #0B0C14
21: 67-67  #646365 on #0B0C14
22:  7-7   #646365 on #0B0C14
22: 20-20  #646365 on #0B0C14
22: 31-31  #646365 on #0B0C14
23: 33-33  #646365 on #0B0C14
23: 42-42  #9C9A97 on #0B0C14
23: 43-43  #646365 on #0B0C14
23: 47-47  #646365 on #0B0C14
